--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -9,7 +9,7 @@ tls:
   cert: conf/server.crt
   key: conf/server.key
 log:
-  writers: file
+  writers: stdout
   logger_level: DEBUG
   logger_file: log/apiserver.log
   log_format_text: true
