--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -28,3 +28,10 @@ docker_db:
   addr: go-mysql:3306
   username: root
   password: root
+
+redis:
+  maxidle: 16 #最初的连接数量
+  maxactive: 0    #连接池最大连接数量,不确定可以用0（0表示自动定义），按需分配
+  idletimeout: 300  #连接关闭时间 300秒 （300秒不使用自动关闭）
+  host: go-redis
+  port: 6379
