--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,4 +1,4 @@
-runmode: debug                 # 开发模式, debug, release, test
+runmode: release                 # 开发模式, debug, release, test
 addr: :8080                  # HTTP绑定端口
 name: apiserver              # API Server的名字
 url: http://127.0.0.1:8080   # pingServer函数请求的API服务器的ip:port
@@ -9,7 +9,8 @@ tls:
   cert: conf/server.crt
   key: conf/server.key
 log:
-  writers: stdout
+#  writers: stdout
+  writers: file
   logger_level: DEBUG
   logger_file: log/apiserver.log
   log_format_text: true
